fix hero image align on smaller screens

--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ table {
 p,
 h1,
 li, a {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Roboto;
 }
 
 .header,
@@ -359,10 +359,12 @@ padding: 10px 35px;
 @media only screen and (max-width: 1500px) {
     .hero-section {
         flex-direction: column-reverse;
+        align-items: center;
     }
 
     .cta-section {
         flex-direction: column;
 
     }
+
   }
